--- a/hw2/VSM.ipynb
+++ b/hw2/VSM.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -46,9 +53,18 @@
    "source": [
     "num_threads = 4\n",
     "MAXCAND = 300\n",
+    "\n",
     "Okapi_k1 = 2.0\n",
     "Okapi_b = 0.75\n",
     "Okapi_k3 = 500.\n",
+    "\n",
+    "R_a = 0.85\n",
+    "R_b = 0.05\n",
+    "R_c = 0.1\n",
+    "# R_b = 0.001\n",
+    "# R_c = 0.099\n",
+    "# R_rounds = 1\n",
+    "\n",
     "IDF_epsilon = 1e-4\n",
     "Ngram_weights = {l:1. for l in range(1, 25)}\n",
     "MAXGRAM = max(Ngram_weights.keys())\n",
@@ -73,8 +89,10 @@
     "# Ngram_weights = {l:(1. - 0.04*(l-2)) for l in range(1, 25)} 0.49\n",
     "Ngram_weights = {l:0. for l in range(1, 25)}\n",
     "Ngram_weights[1] = 1.\n",
-    "Ngram_weights[2] = 0.88\n",
-    "Ngram_weights[3] = 0.77"
+    "Ngram_weights[2] = 1.04 #4: 5886\n",
+    "Ngram_weights[3] = 0.4\n",
+    "# Ngram_weights[2] = 0.88\n",
+    "# Ngram_weights[3] = 0.6"
    ]
   },
   {
@@ -87,60 +105,33 @@
     "    def __init__(self, doc_id):\n",
     "        self.doc_id = ''\n",
     "        self.url = ''\n",
-    "        self.tid = []\n",
-    "        self.freq = []\n",
+    "        self.tfreq = {}\n",
     "        self.id = doc_id\n",
     "        self.length = 0\n",
     "        self.normalized = False\n",
-    "    def normalize(self, avgdl, IDF):        \n",
-    "        for j,t in enumerate(self.tid):\n",
-    "            TF = (Okapi_k1+1.)*self.freq[j]\n",
-    "            dlen_norm = Okapi_k1*(1. - Okapi_b + Okapi_b * (self.length/avgdl)) + self.freq[j]\n",
-    "            self.freq[j] = TF/dlen_norm * IDF[t]\n",
-    "            assert(self.freq[j] > 0)\n",
+    "    def normalize(self, avgdl, IDF):\n",
+    "        for t, f in self.tfreq.items():\n",
+    "            TF = (Okapi_k1+1.)*f\n",
+    "            dlen_norm = Okapi_k1*(1. - Okapi_b + Okapi_b * (self.length/avgdl)) + f\n",
+    "            self.tfreq[t] = TF/dlen_norm * IDF[t]\n",
+    "            assert(self.tfreq[t] > 0)\n",
     "        self.normalized = True\n",
-    "    def update(self, term_id, tf, is_uniq):\n",
-    "        if not is_uniq:\n",
-    "            for j, t in enumerate(self.tid):\n",
-    "                if t == term_id:\n",
-    "                    freq[j] += tf\n",
-    "                    return\n",
-    "        self.tid.append(term_id)\n",
-    "        self.freq.append(tf)\n",
+    "    def update(self, term_id, tf):\n",
+    "        if term_id in self.tfreq:\n",
+    "            self.tfreq[term_id] += tf\n",
+    "        else:\n",
+    "            self.tfreq[term_id] = tf\n",
     "    def getFileSize(self, contents):\n",
     "        self.length = len(contents[self.url])\n",
     "        return self.length\n",
     "    def update_title(self, vocab):\n",
-    "        pass\n",
-    "    def _process():\n",
-    "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Query:\n",
-    "    def __init__(self, qid, text, voc):\n",
-    "        self.qid = qid\n",
-    "        self.vec = np.zeros(len(voc), dtype=np.float32)\n",
-    "        self.dim = len(voc)\n",
-    "        self.id = int(qid[-2:])\n",
-    "        self.length = 0\n",
-    "        self.text = text\n",
-    "        \n",
-    "        self._process(text, voc, 1.)\n",
-    "        self.normalize()\n",
-    "    def match(self, doc):\n",
-    "        out = 0.\n",
-    "        for i, t in enumerate(doc.tid):\n",
-    "            out += self.vec[t] * doc.freq[i]\n",
-    "        return out\n",
-    "    def normalize(self):\n",
-    "        for j in range(self.dim):\n",
-    "            self.vec[j] = (Okapi_k3+1.)*self.vec[j] / (Okapi_k3+self.vec[j])\n",
+    "        r = requests.get(self.url)\n",
+    "        soup = BeautifulSoup(r.content)\n",
+    "        if soup.title == None:\n",
+    "            print('[warning]', self.doc_id, 'has no title!')\n",
+    "        else:\n",
+    "            title = str(soup.title).replace('<title>', '').replace('</title>', '')\n",
+    "            self._process(title, vocab, 1.)\n",
     "    def _process(self, text, voc, weight):\n",
     "        size = len(text)\n",
     "        for start in range(size):\n",
@@ -153,14 +144,107 @@
     "                \n",
     "                if word in voc:\n",
     "                    index = voc[word]\n",
-    "                    self.vec[index] += weight * Ngram_weights[ngram]\n",
-    "                #else:\n",
-    "                #    print('[debug]', word, 'not present')"
+    "                    self.update(index, weight * Ngram_weights[ngram])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Query:\n",
+    "    def __init__(self, qid, text, voc):\n",
+    "        self.qid = qid\n",
+    "        self.vec = {}\n",
+    "        self.dim = len(voc)\n",
+    "        self.id = int(qid[-2:])\n",
+    "        self.length = 0\n",
+    "        self.text = text\n",
+    "        \n",
+    "        self._process(text, voc, 1.)\n",
+    "        self.normalize()\n",
+    "    def match(self, doc_freq):\n",
+    "        out = 0.\n",
+    "        for t, f in doc_freq.items():\n",
+    "            if t in self.vec:\n",
+    "                out += self.vec[t] * f\n",
+    "        return out\n",
+    "    def match_2(self, doc_freq):\n",
+    "        out = 0.\n",
+    "        for t, f in self.vec.items():\n",
+    "            if t in doc_freq:\n",
+    "                out += f * doc_freq[t]\n",
+    "        return out\n",
+    "    def normalize(self):\n",
+    "        for t, f in self.vec.items():\n",
+    "            self.vec[t] = (Okapi_k3+1.)*self.vec[t] / (Okapi_k3+self.vec[t])\n",
+    "        \n",
+    "    def _process(self, text, voc, weight):\n",
+    "        size = len(text)\n",
+    "        for start in range(size):\n",
+    "            for ngram in range(1, MAXGRAM+1):\n",
+    "                if Ngram_weights[ngram] <= 0 or ngram > size:\n",
+    "                    break\n",
+    "                    \n",
+    "                end = start + ngram\n",
+    "                word = text[start:end]\n",
+    "                \n",
+    "                if word in voc:\n",
+    "                    index = voc[word]\n",
+    "                    prev = self.vec[index] if index in self.vec else 0\n",
+    "                    self.vec[index] = prev + weight * Ngram_weights[ngram]\n",
+    "   \n",
+    "    def feedback(self, rel, irrel, tfdocs):\n",
+    "        pos = {}\n",
+    "        neg = {}\n",
+    "        dim = self.dim\n",
+    "\n",
+    "        for i in rel:        \n",
+    "            doc = tfdocs[i]\n",
+    "            for t, f in doc.tfreq.items():\n",
+    "                if t not in pos:\n",
+    "                    pos[t] = 0\n",
+    "                pos[t] += f / len(rel)\n",
+    "\n",
+    "        for i in irrel:\n",
+    "            doc = tfdocs[i]\n",
+    "            for t, f in doc.tfreq.items():\n",
+    "                if t not in neg:\n",
+    "                    neg[t] = 0\n",
+    "                neg[t] += f / len(irrel)\n",
+    "\n",
+    "        norm4 = 0.\n",
+    "\n",
+    "        for t in range(dim):\n",
+    "            a = self.vec[t] if t in self.vec else 0\n",
+    "            b = pos[t] if t in pos else 0\n",
+    "            c = neg[t] if t in neg else 0\n",
+    "\n",
+    "            tmp = R_a * a + R_b * b - R_c * c\n",
+    "            if tmp > 1e-4:\n",
+    "                self.vec[t] = tmp\n",
+    "                norm4 += tmp**2\n",
+    "\n",
+    "        norm4 = norm4**0.5\n",
+    "\n",
+    "        for t,f in self.vec.items():\n",
+    "            self.vec[t] = f/norm4"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def utf8len(s):\n",
+    "    return len(s.encode('utf-8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -173,10 +257,26 @@
     }
    ],
    "source": [
+    "# # load documents\n",
+    "# urlcontents = json.load(open(url2content_name, 'r'))\n",
+    "# tfdocs = []\n",
+    "# doc_ids = {}\n",
+    "# with open(doc2url_name, 'r') as f:\n",
+    "#     for i, line in enumerate(f):\n",
+    "#         if i == 0:\n",
+    "#             print(line)\n",
+    "#         else:\n",
+    "#             fields = line.strip().split(',') # doc_id, url\n",
+    "#             doc = Document(i-1)\n",
+    "#             doc.doc_id = fields[0]\n",
+    "#             doc.url = fields[1]\n",
+    "#             doc.length = utf8len(urlcontents[fields[1]])\n",
+    "#             doc_ids[fields[0]] = i-1\n",
+    "#             tfdocs.append(doc)\n",
+    "# DOC_SZ = len(tfdocs) \n",
     "# load documents\n",
     "urlcontents = json.load(open(url2content_name, 'r'))\n",
-    "tfdocs = []\n",
-    "doc_ids = {}\n",
+    "tfdocs = {}\n",
     "with open(doc2url_name, 'r') as f:\n",
     "    for i, line in enumerate(f):\n",
     "        if i == 0:\n",
@@ -186,15 +286,14 @@
     "            doc = Document(i-1)\n",
     "            doc.doc_id = fields[0]\n",
     "            doc.url = fields[1]\n",
-    "            doc.length = len(urlcontents[fields[1]])\n",
-    "            doc_ids[fields[0]] = i-1\n",
-    "            tfdocs.append(doc)\n",
+    "            doc.length = utf8len(urlcontents[fields[1]])\n",
+    "            tfdocs[fields[0]] = doc\n",
     "DOC_SZ = len(tfdocs) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -237,13 +336,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5a77a6971c94f738a0e9f8f4515eb74",
+       "model_id": "8f42250bff244431ac56f4bbb2ab129e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -271,40 +370,53 @@
     "    term_id = vocab[word]\n",
     "    for pair in voc['docs']:\n",
     "        for docname, tf in pair.items():\n",
-    "            file_id = doc_ids[docname]\n",
-    "            tfdocs[file_id].update(term_id, tf*Ngram_weights[ngram], True);"
+    "#             file_id = doc_ids[docname]\n",
+    "#             tfdocs[file_id].update(term_id, tf*Ngram_weights[ngram]);            \n",
+    "            tfdocs[docname].update(term_id, tf*Ngram_weights[ngram]);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "738.53705\n"
+      "2105.15348\n"
      ]
     }
    ],
    "source": [
+    "# # normalize docs\n",
+    "# avgdl = 0.\n",
+    "# for d in tfdocs:\n",
+    "#     avgdl += d.length\n",
+    "# avgdl /= DOC_SZ\n",
+    "\n",
+    "# for d in tfdocs:\n",
+    "#     d.normalize(avgdl, IDF)\n",
+    "# for d in tfdocs:\n",
+    "#     assert d.normalized\n",
+    "# print(avgdl)\n",
+    "\n",
     "# normalize docs\n",
     "avgdl = 0.\n",
-    "for d in tfdocs:\n",
+    "for d in tfdocs.values():\n",
     "    avgdl += d.length\n",
     "avgdl /= DOC_SZ\n",
     "\n",
-    "for d in tfdocs:\n",
+    "for d in tfdocs.values():\n",
     "    d.normalize(avgdl, IDF)\n",
-    "for d in tfdocs:\n",
+    "for d in tfdocs.values():\n",
     "    assert d.normalized\n",
     "print(avgdl)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -313,13 +425,13 @@
      "text": [
       "Query,News_Index,Relevance\n",
       "\n",
-      "10\n"
+      "20\n"
      ]
     }
    ],
    "source": [
     "if not test:\n",
-    "    num_train = 10\n",
+    "    num_train = 20\n",
     "    train_scores = {}\n",
     "    train_qlist = []\n",
     "    with open(training_name, 'r') as f:\n",
@@ -344,28 +456,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5152170719588044\n",
+      "0.5599610218737976\n",
+      "0.3894689700366134\n",
+      "0.6273016044587132\n",
+      "0.6217333007882513\n",
+      "0.6991578319015238\n",
+      "0.5750103534049709\n",
+      "0.6190806911731834\n",
+      "0.5163070477584677\n",
+      "0.8018830299619291\n",
+      "0.48279034224087364\n",
+      "0.7307891096030388\n",
+      "0.5268911105706184\n",
+      "0.7388343100949136\n",
+      "0.7301818285644349\n",
+      "0.4412173999861834\n",
+      "0.31161234659937503\n",
+      "0.8794364043503106\n",
+      "0.6938501665336123\n",
+      "0.4295715894317428\n",
+      "[NDCG] 0.5945147765645679\n"
+     ]
+    }
+   ],
    "source": [
     "if not test:\n",
     "    mean = 0\n",
     "\n",
     "    for q in train_qlist:\n",
-    "        scores = []\n",
-    "\n",
-    "        def subtask(d):\n",
-    "            return (d.doc_id, q.match(d))\n",
-    "\n",
-    "        with Pool(num_threads) as p:\n",
-    "            chunksize = 500\n",
-    "    #         scores = list(tqdm(p.imap(subtask, tfdocs, chunksize=chunksize), total=DOC_SZ))\n",
-    "            scores = list(p.imap(subtask, tfdocs, chunksize=chunksize))\n",
+    "        scores = []            \n",
+    "        for d in tfdocs.values():\n",
+    "            scores.append((d.doc_id, q.match_2(d.tfreq)))\n",
+    "            \n",
+    "########### feedback\n",
+    "        scores = sorted(scores, key=lambda x: -x[1])\n",
+    "        \n",
+    "        q.feedback([d for d, s in scores[:MAXCAND]], [d for d, s in scores[-MAXCAND:]], tfdocs)\n",
+    "        \n",
+    "        scores = []            \n",
+    "        for d in tfdocs.values():\n",
+    "            scores.append((d.doc_id, q.match(d.tfreq)))  \n",
+    "########### end            \n",
     "\n",
     "        scores = sorted(scores, key=lambda x: -x[1])[:MAXCAND]\n",
-    "        assert scores[0][1] > scores[-1][1]\n",
     "\n",
     "        myrank = [train_scores[q.text][d] if d in train_scores[q.text] else 0 for d, s in scores]\n",
     "        perfrank = sorted(myrank)[::-1]\n",
@@ -393,9 +536,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "test = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query_Index,Query\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# load queries\n",
     "if test:\n",
@@ -412,12 +573,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query 1\n",
+      "Query 2\n",
+      "Query 3\n",
+      "Query 4\n",
+      "Query 5\n",
+      "Query 6\n",
+      "Query 7\n",
+      "Query 8\n",
+      "Query 9\n",
+      "Query 10\n",
+      "Query 11\n",
+      "Query 12\n",
+      "Query 13\n",
+      "Query 14\n",
+      "Query 15\n",
+      "Query 16\n",
+      "Query 17\n",
+      "Query 18\n",
+      "Query 19\n",
+      "Query 20\n"
+     ]
+    }
+   ],
    "source": [
     "if test:\n",
-    "    outcsv_name = 'out.csv'\n",
     "    with open(outcsv_name, 'w') as writer:\n",
     "        writer.write(\"Query_Index\")\n",
     "        for i in range(MAXCAND):\n",
@@ -430,16 +617,26 @@
     "\n",
     "            scores = []\n",
     "\n",
-    "            def subtask(d):\n",
-    "                return (d.doc_id, q.match(d))\n",
-    "            #for doc in tqdm(tfdocs):\n",
-    "            #    scores.append((doc.doc_id, q.match(doc)))\n",
+    "#             def subtask(d):\n",
+    "#                 return (d.doc_id, q.match(d.tfreq))\n",
     "\n",
-    "            with Pool(num_threads) as p:\n",
-    "                chunksize = 500\n",
-    "                #scores = list(tqdm(p.imap_unordered(subtask, tfdocs, chunksize=chunksize), total=DOC_SZ))\n",
-    "                scores = list(tqdm(p.imap(subtask, tfdocs, chunksize=chunksize), total=DOC_SZ))\n",
+    "#             with Pool(num_threads) as p:\n",
+    "#                 chunksize = 1000\n",
+    "#                 scores = list(p.imap_unordered(subtask, tfdocs, chunksize=chunksize))\n",
+    "            \n",
+    "            scores = []\n",
+    "            for d in tfdocs.values():\n",
+    "                scores.append((d.doc_id, q.match_2(d.tfreq)))\n",
+    "            \n",
+    "########### feedback\n",
+    "            scores = sorted(scores, key=lambda x: -x[1])\n",
     "\n",
+    "            q.feedback([d for d, s in scores[:MAXCAND]], [d for d, s in scores[-MAXCAND:]], tfdocs)\n",
+    "\n",
+    "            scores = []            \n",
+    "            for d in tfdocs.values():\n",
+    "                scores.append((d.doc_id, q.match(d.tfreq)))  \n",
+    "########### end    \n",
     "\n",
     "            scores = sorted(scores, key=lambda x: -x[1])[:MAXCAND]\n",
     "            assert scores[0][1] > scores[-1][1]\n",
@@ -473,7 +670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
