reached 0.234 public, NDCG 0.6268

--- a/hw2/VSM.ipynb
+++ b/hw2/VSM.ipynb
@@ -2,13 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -29,6 +22,7 @@
    "source": [
     "inverted_filename = 'inverted_file.json'\n",
     "url2content_name = 'url2content.json'\n",
+    "url2title_name = 'url2titles.json'\n",
     "\n",
     "doc2url_name = 'news_data_1/NC_1.csv'\n",
     "training_name = 'news_data_1/TD.csv'\n",
@@ -54,16 +48,13 @@
     "num_threads = 4\n",
     "MAXCAND = 300\n",
     "\n",
-    "Okapi_k1 = 2.0\n",
+    "Okapi_k1 = 2.\n",
     "Okapi_b = 0.75\n",
     "Okapi_k3 = 500.\n",
     "\n",
-    "R_a = 0.85\n",
-    "R_b = 0.05\n",
-    "R_c = 0.1\n",
-    "# R_b = 0.001\n",
-    "# R_c = 0.099\n",
-    "# R_rounds = 1\n",
+    "# R_a = 0.85\n",
+    "# R_b = 0.05\n",
+    "# R_c = 0.1\n",
     "\n",
     "IDF_epsilon = 1e-4\n",
     "Ngram_weights = {l:1. for l in range(1, 25)}\n",
@@ -89,7 +80,7 @@
     "# Ngram_weights = {l:(1. - 0.04*(l-2)) for l in range(1, 25)} 0.49\n",
     "Ngram_weights = {l:0. for l in range(1, 25)}\n",
     "Ngram_weights[1] = 1.\n",
-    "Ngram_weights[2] = 1.04 #4: 5886\n",
+    "Ngram_weights[2] = 1.04 #1.04: 5886\n",
     "Ngram_weights[3] = 0.4\n",
     "# Ngram_weights[2] = 0.88\n",
     "# Ngram_weights[3] = 0.6"
@@ -145,6 +136,206 @@
     "                if word in voc:\n",
     "                    index = voc[word]\n",
     "                    self.update(index, weight * Ngram_weights[ngram])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def utf8len(s):\n",
+    "    return len(s.encode('utf-8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "News_Index,News_URL\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load documents\n",
+    "urlcontents = json.load(open(url2content_name, 'r'))\n",
+    "tfdocs = {}\n",
+    "with open(doc2url_name, 'r') as f:\n",
+    "    for i, line in enumerate(f):\n",
+    "        if i == 0:\n",
+    "            print(line)\n",
+    "        else:\n",
+    "            fields = line.strip().split(',') # doc_id, url\n",
+    "            doc = Document(i-1)\n",
+    "            doc.doc_id = fields[0]\n",
+    "            doc.url = fields[1]\n",
+    "            doc.length = utf8len(urlcontents[fields[1]])\n",
+    "            tfdocs[fields[0]] = doc\n",
+    "DOC_SZ = len(tfdocs) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inverted = json.load(open(inverted_filename, 'r'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "190376\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load vocab\n",
+    "vocab = {}\n",
+    "IDF = {}\n",
+    "for (word, voc) in inverted.items():\n",
+    "    ngram = len(word)\n",
+    "    if Ngram_weights[ngram] <= 0:\n",
+    "        continue\n",
+    "    i = len(vocab)\n",
+    "    vocab[word] = i\n",
+    "    idf = voc['idf']\n",
+    "    N = DOC_SZ / idf\n",
+    "    assert N <= DOC_SZ\n",
+    "    IDF[i] = max(IDF_epsilon, math.log((DOC_SZ - N + 0.5)/(N + 0.5)))\n",
+    "#     IDF[i] = max(IDF_epsilon, math.log(idf))\n",
+    "    \n",
+    "VOC_SZ = len(vocab)\n",
+    "print(VOC_SZ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "883386b0a5ec402eb68263477cf90e6c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=217118), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#load raw tf\n",
+    "for i, (word, voc) in tqdm(enumerate(inverted.items()), total=len(inverted)):\n",
+    "    ngram = len(word)\n",
+    "    if word not in vocab:\n",
+    "        continue\n",
+    "    term_id = vocab[word]\n",
+    "    for pair in voc['docs']:\n",
+    "        for docname, tf in pair.items():           \n",
+    "            tfdocs[docname].update(term_id, tf*Ngram_weights[ngram]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "76f3c6f290d2433a932046c11dcb1900",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=100000), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "urltitles = json.load(open(url2title_name, 'r'))\n",
+    "for d in tqdm(tfdocs.values()):\n",
+    "    title = urltitles[d.url].strip()\n",
+    "    if title == '':\n",
+    "        #print('[warning]', d.doc_id, 'has no title !')\n",
+    "        pass\n",
+    "    else:\n",
+    "        d._process(title, vocab, 1.)\n",
+    "        d.length += utf8len(title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2177.24542\n"
+     ]
+    }
+   ],
+   "source": [
+    "# normalize docs\n",
+    "avgdl = 0.\n",
+    "for d in tfdocs.values():\n",
+    "    avgdl += d.length\n",
+    "avgdl /= DOC_SZ\n",
+    "\n",
+    "for d in tfdocs.values():\n",
+    "    d.normalize(avgdl, IDF)\n",
+    "for d in tfdocs.values():\n",
+    "    assert d.normalized\n",
+    "print(avgdl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R_a = 0.75\n",
+    "R_b = 0.15\n",
+    "R_c = 0.1"
    ]
   },
   {
@@ -214,8 +405,6 @@
     "                    neg[t] = 0\n",
     "                neg[t] += f / len(irrel)\n",
     "\n",
-    "        norm4 = 0.\n",
-    "\n",
     "        for t in range(dim):\n",
     "            a = self.vec[t] if t in self.vec else 0\n",
     "            b = pos[t] if t in pos else 0\n",
@@ -223,200 +412,12 @@
     "\n",
     "            tmp = R_a * a + R_b * b - R_c * c\n",
     "            if tmp > 1e-4:\n",
-    "                self.vec[t] = tmp\n",
-    "                norm4 += tmp**2\n",
-    "\n",
-    "        norm4 = norm4**0.5\n",
-    "\n",
-    "        for t,f in self.vec.items():\n",
-    "            self.vec[t] = f/norm4"
+    "                self.vec[t] = tmp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def utf8len(s):\n",
-    "    return len(s.encode('utf-8'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "News_Index,News_URL\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# # load documents\n",
-    "# urlcontents = json.load(open(url2content_name, 'r'))\n",
-    "# tfdocs = []\n",
-    "# doc_ids = {}\n",
-    "# with open(doc2url_name, 'r') as f:\n",
-    "#     for i, line in enumerate(f):\n",
-    "#         if i == 0:\n",
-    "#             print(line)\n",
-    "#         else:\n",
-    "#             fields = line.strip().split(',') # doc_id, url\n",
-    "#             doc = Document(i-1)\n",
-    "#             doc.doc_id = fields[0]\n",
-    "#             doc.url = fields[1]\n",
-    "#             doc.length = utf8len(urlcontents[fields[1]])\n",
-    "#             doc_ids[fields[0]] = i-1\n",
-    "#             tfdocs.append(doc)\n",
-    "# DOC_SZ = len(tfdocs) \n",
-    "# load documents\n",
-    "urlcontents = json.load(open(url2content_name, 'r'))\n",
-    "tfdocs = {}\n",
-    "with open(doc2url_name, 'r') as f:\n",
-    "    for i, line in enumerate(f):\n",
-    "        if i == 0:\n",
-    "            print(line)\n",
-    "        else:\n",
-    "            fields = line.strip().split(',') # doc_id, url\n",
-    "            doc = Document(i-1)\n",
-    "            doc.doc_id = fields[0]\n",
-    "            doc.url = fields[1]\n",
-    "            doc.length = utf8len(urlcontents[fields[1]])\n",
-    "            tfdocs[fields[0]] = doc\n",
-    "DOC_SZ = len(tfdocs) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inverted = json.load(open(inverted_filename, 'r'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "190376\n"
-     ]
-    }
-   ],
-   "source": [
-    "# load vocab\n",
-    "vocab = {}\n",
-    "IDF = {}\n",
-    "for (word, voc) in inverted.items():\n",
-    "    ngram = len(word)\n",
-    "    if Ngram_weights[ngram] <= 0:\n",
-    "        continue\n",
-    "    i = len(vocab)\n",
-    "    vocab[word] = i\n",
-    "    idf = voc['idf']\n",
-    "    N = DOC_SZ / idf\n",
-    "    assert N <= DOC_SZ\n",
-    "    IDF[i] = max(IDF_epsilon, math.log((DOC_SZ - N + 0.5)/(N + 0.5)))\n",
-    "    \n",
-    "#     IDF[i] = voc['idf']\n",
-    "# std::max(IDF_epsilon, std::log((DOC_SZ - N + 0.5)/(N + 0.5)))\n",
-    "VOC_SZ = len(vocab)\n",
-    "print(VOC_SZ)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f42250bff244431ac56f4bbb2ab129e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=217118), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "#load raw tf\n",
-    "for i, (word, voc) in tqdm(enumerate(inverted.items()), total=len(inverted)):\n",
-    "    ngram = len(word)\n",
-    "    if word not in vocab:\n",
-    "        continue\n",
-    "    term_id = vocab[word]\n",
-    "    for pair in voc['docs']:\n",
-    "        for docname, tf in pair.items():\n",
-    "#             file_id = doc_ids[docname]\n",
-    "#             tfdocs[file_id].update(term_id, tf*Ngram_weights[ngram]);            \n",
-    "            tfdocs[docname].update(term_id, tf*Ngram_weights[ngram]);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2105.15348\n"
-     ]
-    }
-   ],
-   "source": [
-    "# # normalize docs\n",
-    "# avgdl = 0.\n",
-    "# for d in tfdocs:\n",
-    "#     avgdl += d.length\n",
-    "# avgdl /= DOC_SZ\n",
-    "\n",
-    "# for d in tfdocs:\n",
-    "#     d.normalize(avgdl, IDF)\n",
-    "# for d in tfdocs:\n",
-    "#     assert d.normalized\n",
-    "# print(avgdl)\n",
-    "\n",
-    "# normalize docs\n",
-    "avgdl = 0.\n",
-    "for d in tfdocs.values():\n",
-    "    avgdl += d.length\n",
-    "avgdl /= DOC_SZ\n",
-    "\n",
-    "for d in tfdocs.values():\n",
-    "    d.normalize(avgdl, IDF)\n",
-    "for d in tfdocs.values():\n",
-    "    assert d.normalized\n",
-    "print(avgdl)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -456,36 +457,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5152170719588044\n",
-      "0.5599610218737976\n",
-      "0.3894689700366134\n",
-      "0.6273016044587132\n",
-      "0.6217333007882513\n",
-      "0.6991578319015238\n",
-      "0.5750103534049709\n",
-      "0.6190806911731834\n",
-      "0.5163070477584677\n",
-      "0.8018830299619291\n",
-      "0.48279034224087364\n",
-      "0.7307891096030388\n",
-      "0.5268911105706184\n",
-      "0.7388343100949136\n",
-      "0.7301818285644349\n",
-      "0.4412173999861834\n",
-      "0.31161234659937503\n",
-      "0.8794364043503106\n",
-      "0.6938501665336123\n",
-      "0.4295715894317428\n",
-      "[NDCG] 0.5945147765645679\n"
+      "0.5321209105892122\n",
+      "0.5636042046580734\n",
+      "0.5476786125680425\n",
+      "0.5229674122483885\n",
+      "0.5802183766594967\n",
+      "0.6618616985606891\n",
+      "0.6321486392685015\n",
+      "0.7105221146899685\n",
+      "0.6593882926125051\n",
+      "0.8279933977506758\n",
+      "0.5850924574576233\n",
+      "0.8448235086059627\n",
+      "0.5713745567540826\n",
+      "0.7623995901990883\n",
+      "0.7857883804572791\n",
+      "0.5274236205846091\n",
+      "0.2884595707446423\n",
+      "0.9071764005499712\n",
+      "0.6480561430460704\n",
+      "0.3773925921994312\n",
+      "[NDCG] 0.6268245240102156\n"
      ]
     }
    ],
@@ -545,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
